--- a/docker-mosquitto/mosquitto/config/mosquitto.conf
+++ b/docker-mosquitto/mosquitto/config/mosquitto.conf
@@ -212,7 +212,7 @@
 # listener 0 /tmp/mosquitto.sock
 #
 # listener port-number [ip address/host name/unix socket path]
-listener 1883 0.0.0.0
+listener 9001 0.0.0.0
 
 # By default, a listener will attempt to listen on all supported IP protocol
 # versions. If you do not have an IPv4 or IPv6 interface you may wish to
@@ -262,6 +262,7 @@ listener 1883 0.0.0.0
 # Certificate based TLS may be used with websockets, except that only the
 # cafile, certfile, keyfile, ciphers, and ciphers_tls13 options are supported.
 #protocol mqtt
+protocol websockets
 
 # Set use_username_as_clientid to true to replace the clientid that a client
 # connected with with its username. This allows authentication to be tied to
